Add loading image

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>a simple pjax demo</title>
-  </head>
-  <body>
-    <header>It's a pjax demo</header>
-	<hr>
-	<section>
-		<h1>There is a doll:</h1>
-		<img id="doll" src="images/<%= doll %>.gif">
-		<button id="getDoll">Get new doll</button>
-	</section>
-	<hr>
-	<footer>Author: <a href="http://www.linkgod.net" target="_blank">linkgod</a></footer>
+    <head>
+        <meta charset="utf-8">
+        <title>a simple pjax demo</title>
+        <link rel="stylesheet" href="css/page.css">
+    </head>
+    <body>
+        <header>It's a pjax demo</header>
+        <hr>
+        <section>
+            <h1>There is a doll:</h1>
+            <div id="content">
+                <img id="doll" src="images/<%= doll %>.gif">
+                <img id="loading" src="images/loading.gif">
+            </div>
+            <br>
+            <button id="getDoll">Get new doll</button>
+        </section>
+        <hr>
+        <footer>Author: <a href="http://www.linkgod.net" target="_blank">linkgod</a></footer>
 
-	<script src="javascripts/main.js"></script>
-  </body>
+        <script src="javascripts/main.js"></script>
+    </body>
 </html>
